[014-0.0.6]: Fixed html overflow issue >> Forced the html and global css grid to have fixed postioning and bounded them to the display itself so the page functions more like a native app on a smartphone in portrait mode.

--- a/stylesheets/1_coreStyle.css
+++ b/stylesheets/1_coreStyle.css
@@ -12,7 +12,13 @@
 html{
   font-family: sans-serif;
   font-size: 10px;
-  overflow: hidden;
+
+  /* Forcing the html to fit the screen */
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 body{
